TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2008-02-02 MickeM
 * Might have fixed the "missing eventlog messages" problem.

2008-01-27 MickeM
 * Fixed a memory-leak in format_time
 * Fixed so time/date is displayed in "local time" (not UTC) for the eventlog check
 + Added %message% to evenlog check. Will display the "proper formated eventlog message" as in the eventlog viewer.
   For this to work you need to have the descriptions flag set
   In short: /nrpe -H 192.168.0.147 -c checkEventLog -a truncate=1024 "syntax=%generated%: %message%" descriptions=true file=System MaxWarn=1 MaxCrit=1 filter+eventType==error filter+generated=\<12h filter=new filter=all filter=in
 + Added option "unique" to CheckEventLog If this is present only unique errors will be returned.
   The uniqueness is defined by event-log, event-source, event-id and event-category.

2007-12-16 MickeM
 + A lot of new features in the LUA module only "arguments" missing (as well as exposing more of the API)
 * Changed some exceptions that were thrown wrong

2007-12-11 MickeM
 + Added support for index-lookups of PDH counters (hopefully *all* locale problems are now fixed (yeah right))

2007-12-10 MickeM
 + Added intial draft for LUA module

2007-12-09 MickeM
 + Added a check if the service is started when running with /test so you get a warning
 + Improved the socket thread with:
    * a default-catch
    * If the socket failes to start we still wait for it to shut down (no error message)
 + Added first version of the NSCA agent (NSCAgent.dll)
   (no encryption support as of yet, but will come)

2007-12-04 MickeM
 ! 0.3.0 Released

2007-12-01 MickeM
 * Fixed issue with date formating in FILEAGE

2007-11-29 MickeM
 * Fixed issue with date formating in FILEAGE

2007-11-28 MickeM
 ! 0.3.0 RC-1